// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`handle multi document 1`] = `
"var data = [
  {
    "apiVersion": "batch/v1",
    "kind": "CronJob",
    "metadata": {
      "name": "first-cronjob",
      "namespace": "default"
    },
    "spec": {
      "schedule": "*/10 * * * *",
      "concurrencyPolicy": "Forbid",
      "successfulJobsHistoryLimit": 3,
      "failedJobsHistoryLimit": 1,
      "jobTemplate": {
        "spec": {
          "template": {
            "spec": {
              "containers": [
                {
                  "name": "first-job",
                  "image": "busybox:latest",
                  "command": [
                    "/bin/sh",
                    "-c",
                    'echo "First job running"; date'
                  ]
                }
              ],
              "restartPolicy": "OnFailure"
            }
          }
        }
      }
    }
  },
  {
    "apiVersion": "batch/v1",
    "kind": "CronJob",
    "metadata": {
      "name": "second-cronjob",
      "namespace": "default"
    },
    "spec": {
      "schedule": "0 0 * * *",
      "concurrencyPolicy": "Forbid",
      "successfulJobsHistoryLimit": 3,
      "failedJobsHistoryLimit": 1,
      "jobTemplate": {
        "spec": {
          "template": {
            "spec": {
              "containers": [
                {
                  "name": "second-job",
                  "image": "busybox:latest",
                  "command": [
                    "/bin/sh",
                    "-c",
                    'echo "Second job running"; date'
                  ]
                }
              ],
              "restartPolicy": "OnFailure"
            }
          }
        }
      }
    }
  }
];
var cronjobs_default = data;

console.log(cronjobs_default);
"
`;

exports[`handle transforms 1`] = `
"var data = {
  "this": "transformed"
};
var config_default = data;

console.log(config_default);
"
`;

exports[`handles yaml > expect yaml import to be a json object 1`] = `
"var data = {
  "pluginDir": "./plugins",
  "web": {
    "enabled": true
  },
  "logging": {
    "type": "stdout",
    "level": "info"
  }
};
var yaml_config_default = data;

console.log(yaml_config_default);
"
`;

exports[`handles yaml > expect yaml import to be a string 1`] = `
"var yaml_config_default = "pluginDir: ./plugins\\n\\nweb:\\n  enabled: true\\n\\nlogging:\\n  type: stdout\\n  level: info\\n";

console.log(yaml_config_default);
"
`;

exports[`handles yml > expect yml import to be a json object 1`] = `
"var data = {
  "pluginDir": "./plugins",
  "web": {
    "enabled": true
  },
  "logging": {
    "type": "stdout",
    "level": "info"
  }
};
var yml_config_default = data;

console.log(yml_config_default);
"
`;

exports[`handles yml > expect yml import to be a string 1`] = `
"var yml_config_default = "pluginDir: ./plugins\\n\\nweb:\\n  enabled: true\\n\\nlogging:\\n  type: stdout\\n  level: info\\n";

console.log(yml_config_default);
"
`;
